# tip-rs

./: .gitignore  README.md
bot-client/: Cargo.toml
bot-client/entity/: Cargo.toml
bot-client/entity/src/: event_member.rs  guild.rs  lib.rs  mod.rs
bot-client/entity/src/json/: action_data.rs  mod.rs
bot-client/migration/src/: lib.rs  m20230226_213739_create_initial_tables.rs  m20230321_070938_add_settings.rs  m20230327_161531_add_basic_event_fields.rs  m20230327_192518_add_user_data_fields.rs  m20230402_132850_add_scheduled_actions.rs  m20230403_204248_add_survey_response_table.rs
bot-client/src/: client.rs  lib.rs  main.rs  utils.rs
bot-client/src/actions/: create_survey.rs  edit_message.rs  mod.rs  resolve_survey.rs  run_actions.rs  send_message.rs
bot-client/src/commands/: event.rs  mod.rs  ping.rs  settings.rs
bot-client/src/events/: guild_channel_delete.rs  guild_delete.rs  guild_member_update.rs  guild_role_delete.rs  interaction_create.rs  mod.rs  ready.rs
web-client/: package.json  tailwind.config.cjs
web-client/src/: hooks.server.js
web-client/src/lib/: Copyright.svelte  Event.svelte  Footer.svelte  Guild.svelte  Header.svelte  auth.js  stores.js
web-client/src/lib/server/: database.js
web-client/src/lib/server/entity/: Event.js  EventMember.js  Guild.js  User.js
web-client/src/routes/: +layout.js  +layout.server.js  +layout.svelte  +page.server.js  +page.svelte
web-client/src/routes/api/auth/: +server.js
web-client/src/routes/api/callback/: +server.js
web-client/src/routes/api/login/: +server.js
web-client/src/routes/api/logout/: +server.js
web-client/src/routes/api/refresh/: +server.js
web-client/src/routes/guild/[guild]/: +page.server.js  +page.svelte
web-client/src/routes/guild/[guild]/event/: +layout.svelte
web-client/src/routes/guild/[guild]/event/[event]/: +page.server.js  +page.svelte
