[package]
name = "bot-client"
version = "0.1.0"
authors = ["Simon Pannek"]
edition = "2021"
description = "Tip is a small discord bot for event planning/management, controlled by a web interface."
repository = "https://github.com/simonpannek/tip-rs"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

anyhow = "1.0"
itertools = "0.10"
poise = "0.5.2"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.sea-orm]
version = "0.11"
features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["cache", "client", "collector", "rustls_backend", "unstable_discord_api"]

[dependencies.tokio]
version = "1.25"
features = ["macros", "rt-multi-thread"]
