[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.159"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["utils"]

[dependencies.sea-orm]
version = "0.11"
features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]
